# benchmark_GPU_python

./: .gitignore  LICENSE  README.md  pixi.toml  pyproject.toml
src/benchmark/: __init__.py  charts.py  operations.py  utils.py
tests/: __init__.py  test_benchmarks.py
