[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "benchmark"
version = "0.1.0"
description = "A minimalist Python library for benchmarking GPU operations comparing numpy, cupy, and pyclesperanto"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "Stephane Rigaud" }
]
keywords = ["benchmark", "gpu", "numpy", "cupy", "pyclesperanto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# dependencies = [
#     "numpy>=2.3.0",
#     "pytest>=9.0",
#     "pytest-benchmark>=5.2.3",
#     "matplotlib>=3.10",
#     "pandas>=2.3.3",
#     "scipy>=1.16.3",
#     "cupy>=13.6",
#     "pyclesperanto>=0.19",
# ]

[project.scripts]
benchmark-charts = "benchmark.charts:main"

[tool.hatch.build.targets.wheel]
packages = ["src/benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
